--- a/app/views/home/catalog.html.slim
+++ b/app/views/home/catalog.html.slim
@@ -7,3 +7,26 @@
     .span10
       p
         | Products
+
+      .table.table-striped
+        table
+          thead
+            th Title
+            th Description
+            th Category
+            th Country
+            th Price
+
+          tbody
+            - @proposals.each do |proposal|
+              tr id="proposal_#{proposal.id}"
+                td
+                  = proposal.title
+                td
+                  = proposal.description
+                td
+                  = proposal.category
+                td
+                  = proposal.country
+                td
+                  = number_to_currency(proposal.price)
