--- a/app/views/home/catalog.html.slim
+++ b/app/views/home/catalog.html.slim
@@ -2,38 +2,10 @@ h1
   | Sample Catalog
 
 .row-fluid
-  - if @proposals.any?
     .span3
       p
         | Filter
       
         | Products
     .span9
-     .table.table-striped
-      table
-        thead
-          th
-          th Title
-          th Brand
-          th Rating
-          th Price
-
-        tbody
-          - @proposals.each do |proposal|
-            tr id="proposal_#{proposal.id}"
-              td
-                img src=proposal.image_url
-              td
-                = proposal.title
-              td
-                = proposal.brand
-              td
-                = proposal.rating
-              td
-                = number_to_currency(proposal.price)
-            
-  - else
-    .span8.offset2
-      .alert
-        strong 
-          | We don't have any products yet!
+      = render :partial => 'home/proposals_list', :locals => { :proposals => @proposals }
