--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,9 @@ html
     = javascript_include_tag :application
 
     title
-      | Wiselinks example
+      - if content_for?(:title)
+        = yield(:title)
+        
     = csrf_meta_tag
     
   body
