--- a/app/views/home/catalog.html.slim
+++ b/app/views/home/catalog.html.slim
@@ -14,4 +14,5 @@ h1
     .span9
       p
         | Products
+      div{ role='proposals' }  
         = render :partial => 'proposals/table', :locals => { :proposals => @proposals }
