--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,14 +13,15 @@ html
     = csrf_meta_tag
     
   body
-    .navbar.navbar-fixed-top.navbar-inverse
-      .navbar-inner
-        .container
-          ul.nav
-            li{ class=(params[:controller] == 'home' && params[:action] == 'about' ? 'active' : '') }
-              = link_to 'About Wiselinks', root_path, 'data-push' => true
-            li{ class=(params[:controller] == 'home' && params[:action] == 'catalog' ? 'active' : '') }
-              = link_to 'Sample Catalog', catalog_path, 'data-push' => true
+    .layout
+      .navbar.navbar-fixed-top.navbar-inverse
+        .navbar-inner
+          .wrapper
+            ul.nav
+              li{ class=(params[:controller] == 'home' && params[:action] == 'about' ? 'active' : '') }
+                = link_to 'About Wiselinks', root_path, 'data-push' => true
+              li{ class=(params[:controller] == 'home' && params[:action] == 'catalog' ? 'active' : '') }
+                = link_to 'Sample Catalog', catalog_path, 'data-push' => true
 
-    .container
-      = yield
+      .wrapper
+        = yield
