--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -81,3 +81,18 @@ ul.proposals
 
 .controls-row [class*="span"]
   margin: 0
+
+.console
+  position: fixed
+  overflow-y: auto
+  bottom: 0
+  left: 0
+  padding: 10px 0
+  margin: 0
+  height: 120px
+  width: 100%
+  list-style: none
+  +box-shadow(0 -1px 3px rgba(0,0,0,.05))
+  background: #fff
+  li
+    margin-left: 20px
