--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
     = csrf_meta_tag
     
   body
-    .layout
+    .layout role='layout'
       .navbar.navbar-fixed-top.navbar-inverse
         .navbar-inner
           .wrapper
@@ -25,3 +25,5 @@ html
 
       .wrapper
         = yield
+
+    ul.console{ role="wiseconsole" }
