--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -96,3 +96,12 @@ ul.proposals
   background: #fff
   li
     margin-left: 20px
+    &.loading
+      padding-bottom: 5px
+      margin-bottom: 10px
+      border-bottom: 1px solid #dedede
+
+.clear_console
+  position: fixed
+  right: 40px
+  bottom: 100px
