changed order for console

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -89,19 +89,21 @@ ul.proposals
   left: 0
   padding: 10px 0
   margin: 0
-  height: 120px
+  height: 160px
   width: 100%
   list-style: none
+  font-size: 12px
   +box-shadow(0 -1px 3px rgba(0,0,0,.05))
-  background: #fff
+  background: #f5f5f5
   li
     margin-left: 20px
-    &.loading
+    line-height: 14px
+    &.status
       padding-bottom: 5px
-      margin-bottom: 10px
+      margin-bottom: 8px
       border-bottom: 1px solid #dedede
 
 .clear_console
   position: fixed
-  right: 40px
-  bottom: 100px
+  right: 30px
+  bottom: 150px
