--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,6 +26,6 @@ html
       .wrapper
         = yield
 
-    ul.console{ role="wiseconsole" }
-    a.clear_console{ href="javascript:void(null)" role="clear_wiseconsole" }
+    ul.console{ role="console" }
+    a.clear_console{ href="javascript:void(null)" role="clear_console" }
       | Clear console
