--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -96,7 +96,7 @@ ul.proposals
   +box-shadow(0 -1px 3px rgba(0,0,0,.05))
   background: #f5f5f5
   li
-    margin-left: 20px
+    padding-left: 20px
     line-height: 14px
     &.status
       padding-bottom: 5px
