Added example with redirects following

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -10,4 +10,6 @@ h1
   p
     | You may find Wiselinks similar to Turbolinks or Pjax, but Wiselinks have several rather important differences from both projects. We tried to make Wiselinks as easy to use as Turbolinks are but also as configurable as Pjax.
   p
-    = link_to 'Proceed to sample product catalog…', catalog_path, 'data-push' => true     
+    = link_to 'Proceed to sample product catalog…', catalog_path, 'data-push' => true
+  p
+    = link_to 'Redirect…', redirect_path, 'data-push' => true  
