--- a/app/views/proposals/_table.html.slim
+++ b/app/views/proposals/_table.html.slim
@@ -1,4 +1,4 @@
-= will_paginate proposals, :renderer => WiselinksRenderer, :link_attributes => { 'data-push' => 'partial', 'data-target' => '@proposals' }
+= will_paginate proposals, :renderer => WiselinksLinkRenderer, :link_attributes => { 'data-push' => 'partial', 'data-target' => '@proposals' }
 
 - if proposals.any?
   ul.proposals
@@ -24,4 +24,4 @@
       strong 
         | We don't have any proposals yet!
 
-= will_paginate proposals, :renderer => WiselinksRenderer, :link_attributes => { 'data-push' => 'partial', 'data-target' => '@proposals' }
+= will_paginate proposals, :renderer => WiselinksLinkRenderer, :link_attributes => { 'data-push' => 'partial', 'data-target' => '@proposals' }
