--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
         = yield(:title)
         
     = csrf_meta_tag
-    = wiselinks_meta_tag
+    / = wiselinks_meta_tag
     
   body
     .layout{ role='content' }
