Added wiselinks version number

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -82,6 +82,12 @@ ul.proposals
 .controls-row [class*="span"]
   margin: 0
 
+.navbar .version
+  padding: 10px 15px
+  float: left
+  margin-left: 1em
+  color: #8db21b
+
 .console
   position: fixed
   overflow-y: auto
