--- a/app/views/layouts/wiselinks.html.slim
+++ b/app/views/layouts/wiselinks.html.slim
@@ -7,6 +7,10 @@
             = link_to 'About Wiselinks', root_path, 'data-push' => true
           li{ class=(params[:controller] == 'home' && params[:action] == 'catalog' ? 'active' : '') }
             = link_to 'Sample Catalog', catalog_path, 'data-push' => true
+        - if wiselinks_version.present?
+            span.version
+              | build with wiselinks-
+              = wiselinks_version  
 
   .wrapper
     = yield
