--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,7 +25,7 @@ html
                 = link_to 'Sample Catalog', catalog_path, 'data-push' => true              
             - if wiselinks_version.present?
               span.version
-                | build with wiselinks-
+                | built with wiselinks-
                 = wiselinks_version
       .wrapper
         = yield
