--- a/app/views/layouts/wiselinks.html.slim
+++ b/app/views/layouts/wiselinks.html.slim
@@ -9,7 +9,7 @@
             = link_to 'Sample Catalog', catalog_path, 'data-push' => true
         - if wiselinks_version.present?
             span.version
-              | build with wiselinks-
+              | built with wiselinks-
               = wiselinks_version  
 
   .wrapper
