Upgraded to rails-3.2.13. Added Rails version to the header.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -87,6 +87,20 @@ ul.proposals
   float: left
   margin-left: 1em
   color: #8db21b
+  a
+    color: #8db21b
+    text-decoration: underline
+    &:hover
+      text-decoration: none
+
+  ul
+    display: inline
+    margin: 0
+    li
+      display: inline
+      margin-left: 10px      
+      &:first-child
+        margin-left: 0
 
 .console
   position: fixed
